# smart_backend

./: CMakeLists.txt  pom.xml  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ble_mesh.c  ble_mesh.h  board.h  general_header.h  hlw8032.c  hlw8032.h  main.c  onoff_model.c  onoff_model.h  provision.c  save_retrieve_nvs.c  save_retrieve_nvs.h  sensor_model.c  sensor_model.h  wifi.c  wifi.h
src/main/java/com/zedeck/smartoutletserver/: Initializer.java  SmartOutletServerApplication.java
src/main/java/com/zedeck/smartoutletserver/config/: ApplicationMvcConfig.java  ApplicationProperties.java  ApplicationSecurityConfig.java  AuthenticationFailureListener.java  AuthenticationSuccessListener.java  BruteForceProtectionService.java  BruteForceProtectionServiceImpl.java  CustomCorsConfiguration.java  FailedLogin.java  RestTemplateConfig.java  SwaggerConfig.java
src/main/java/com/zedeck/smartoutletserver/controller/: AuthController.java  DeviceController.java  DeviceReadingsController.java  GroupController.java  SensorDataController.java  UserAccountController.java
src/main/java/com/zedeck/smartoutletserver/dto/: ChangePasswordDto.java  DeviceDto.java  DeviceStateDto.java  GroupDeviceDto.java  GroupDto.java  LoginDto.java  LoginResponseDto.java  ResponseData.java  ResponseMessage.java  SensorDataDto.java  SheduleDto.java  UserAccountDto.java
src/main/java/com/zedeck/smartoutletserver/jwt/: AuthEntryPointJwt.java  AuthTokenFilter.java  JWTUtils.java  JwtTokenVerifier.java
src/test/java/com/zedeck/smartoutletserver/: SmartOutletServerApplicationTests.java
(+42 files in other folders)
